# SmartReportGenerator

./: README.md  pyproject.toml  sales.db
data/: sales.csv  sales.json  sales.xlsx  test_sales.csv
reports/: report.html
src/: analysis.py  charts.py  csv_reader.py  data_cleaner.py  data_source.py  excel_reader.py  json_reader.py  main.py  pdf_generator.py  report.py  report_generator.py  scheduler.py  schema_validator.py  sqlite_reader.py
templates/: report.html
tests/: test_analysis.py
