[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoreport"
version = "1.0.0"
description = "Automated Report and Analytics Generator"
requires-python = ">=3.11"
authors = [
    {name = "Mohit Kumar"}
]

dependencies = [
    "typer",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "plotly",
    "jinja2",
    "reportlab",
    "pyyaml",
    "apscheduler",
    "pytest",
    "openpyxl"
]